--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Modern Website</title>
 </head>
 <body>
-    
+    <div class="hero">
+        <nav>
+            <img src="/images/menu.png" class="menu-img">
+            <img src="/images/logo.png" class="logo">
+            <ul>
+                <li><a href="">Latest</a></li>
+                <li><a href="">Modern</a></li>
+                <li><a href="">Contemporary</a></li>
+                <li><a href="">Affordable</a></li>
+            </ul>
+            <button type="button"><span></span></button>
+        </nav>
+    </div>
 </body>
 </html>
