--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
             <img src="/images/lamp.png" class="lamp">
             <img src="/images/light.png" class="light">
         </div>
+        <div class="text-container">
+            <h1>Latest</br>in Lighting</h1>
+            <p>This is the first lamp from our company. We're making a huge collection of modern lamps in all categories from home to office use</p>
+            <a href="">Check All Collections</a>
+            <!-- <div class="control">
+                <p>04</p>
+                <div class="line"><span></span></div>
+                <p>05</p>
+            </div> -->
+        </div>
     </div>
 </body>
 </html>
