--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
     <title>Modern Website</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
                 <li><a href="">Contemporary</a></li>
                 <li><a href="">Affordable</a></li>
             </ul>
-            <button type="button"><span></span></button>
+            <button type="button" id="btn"><span></span></button>
         </nav>
         <div class="lamp-container">
             <img src="/images/lamp.png" class="lamp">
@@ -28,11 +29,11 @@
             <h1>Latest</br>in Lighting</h1>
             <p>This is the first lamp from our company. We're making a huge collection of modern lamps in all categories from home to office use</p>
             <a href="">Check All Collections</a>
-            <!-- <div class="control">
+            <div class="control">
                 <p>04</p>
                 <div class="line"><span></span></div>
                 <p>05</p>
-            </div> -->
+            </div>
         </div>
     </div>
 </body>
