--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
         <div class="lamp-container">
             <img src="/images/lamp.png" class="lamp">
-            <img src="/images/light.png" class="light">
+            <img src="/images/light.png" class="light" id="light">
         </div>
         <div class="text-container">
             <h1>Latest</br>in Lighting</h1>
